# yoga_app

./: README.md  app.py  function_schemas.py  loader.py  pyproject.toml  requirements.txt  retriever.py  utils.py
faiss_index/: index.pkl
yoga_app.git/: config
