[project]
name = "anaisp-ae-2-5"
version = "0.1.0"
description = ""
authors = [
    {name = "sianaisp",email = "anais.plancoulaine@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "streamlit (>=1.47.1,<2.0.0)",
    "openai (>=1.97.1,<2.0.0)",
    "faiss-cpu (>=1.11.0.post1,<2.0.0)",
    "pypdf (>=5.9.0,<6.0.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "requests (>=2.32.4,<3.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "langchain (>=0.1.17,<0.2.0)",
    "langchain-core (>=0.1.48,<0.2.0)",
    "langchain-community (>=0.0.37,<0.1.0)",
    "langchain-openai (>=0.0.8,<0.1.0)",
    "watchdog (>=6.0.0,<7.0.0)",
    "reportlab (>=4.4.3,<5.0.0)"
]

[tool.poetry]
packages = [{include = "anaisp_ae"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
